project/stage/parse_tests/tests/reject/bad_statements/bad_if/before_var_decl.ul
void main () {
    if (true) {}
    boolean wOOP_1123;
}
